--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Stylish Portfolio - Start Bootstrap Template</title>
+  <title>Swaraj</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,6 +22,31 @@
   <link href="css/stylish-portfolio.min.css" rel="stylesheet">
 
 </head>
+<style>
+	.btn {
+    box-shadow: 0 3px 3px 0 rgba(0,0,0,.1);
+    font-weight: 700;
+	}
+
+	.btn {
+	    display: inline-block;
+	    font-weight: 400;
+	    color: #212529;
+	    text-align: center;
+	    vertical-align: middle;
+	    -webkit-user-select: none;
+	    -moz-user-select: none;
+	    -ms-user-select: none;
+	    user-select: none;
+	    background-color: chocolate;
+	    border: 1px solid transparent;
+	    padding: .375rem .75rem;
+	    font-size: 1rem;
+	    line-height: 1.5;
+	    border-radius: .25rem;
+	    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+	}
+</style>
 
 <body id="page-top">
 
@@ -55,9 +80,9 @@
   <!-- Header -->
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
-      <h1 class="mb-1">Stylish Portfolio</h1>
+      <h1 class="mb-1">Swaraj</h1>
       <h3 class="mb-5">
-        <em>A Free Bootstrap Theme by Start Bootstrap</em>
+        <em>A way to know me</em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
     </div>
@@ -65,7 +90,7 @@
   </header>
 
   <!-- About -->
-  <section class="content-section bg-light" id="about">
+<!--   <section class="content-section bg-light" id="about">
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
@@ -76,10 +101,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Services -->
-  <section class="content-section bg-primary text-white text-center" id="services">
+<!--   <section class="content-section bg-primary text-white text-center" id="services">
     <div class="container">
       <div class="content-section-heading">
         <h3 class="text-secondary mb-0">Services</h3>
@@ -126,17 +151,17 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Callout -->
-  <section class="callout">
+<!--   <section class="callout">
     <div class="container text-center">
       <h2 class="mx-auto mb-5">Welcome to
         <em>your</em>
         next website!</h2>
       <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/themes/stylish-portfolio/">Download Now!</a>
     </div>
-  </section>
+  </section> -->
 
   <!-- Portfolio -->
   <section class="content-section" id="portfolio">
@@ -150,8 +175,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Stationary</div>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <div class="h2">SMASH (Smart Assistant Host), a smart voice assistant [Using Python Libraries]</div>
+                <p class="mb-0">SMASH 1.0 (smart assistant host) is an AI assistant project for daily works. Different libraries including text to speech(pyttsx3), speech_recognition, smtplib, webbrowser, os, datetime, Wikipedia modules of Python are being implemented and used here for speech recognition, text to speech convertion, getting information from Wikipedia, getting information about date and time, opening different websites as commanded.</p>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -161,8 +186,9 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Ice Cream</div>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                <div class="h2">S-Chat,A real-time web chat app [using Node.js & Socket.io]</div>
+                <p class="mb-0">It is a real-time chat application which is accessible from any web browser. In this web application, Socket.io is used for real-time , bidirectional communication. Also in this Application, Node.js is implemented as it uses an event-driven, non-blocking I/O model that makes it lightweight and efficient, perfect for data-intensive real-time applications that run across distributed devices.This chat application supports more than two users(no limit) simultaneously.
+                </p>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -172,8 +198,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Strawberries</div>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                <div class="h2">Crash-it [Automated text and media sending to a contact/group (the many times you want) through WhatsApp]</div>
+                <p class="mb-0">Crash-it is a program made with Python3 to send text messages and media any number of times you want to a contact or group in Whatsapp. Selenium Webdriver API is used here to connect the python code to webbrowser and work it automatically.</p>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
@@ -183,8 +209,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Workspace</div>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <div class="h2">Invisible Cloak using OpenCV and Python</div>
+                <p class="mb-0">Invisible cloak makes everything invisible if a red object is wrapped around it.OpenCV of Python3 is used here for computer vision and making this project.</p>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
@@ -195,22 +221,22 @@
   </section>
 
   <!-- Call to Action -->
-  <section class="content-section bg-primary text-white">
+<!--   <section class="content-section bg-primary text-white">
     <div class="container text-center">
       <h2 class="mb-4">The buttons below are impossible to resist...</h2>
       <a href="#!" class="btn btn-xl btn-light mr-4">Click Me!</a>
       <a href="#!" class="btn btn-xl btn-dark">Look at Me!</a>
     </div>
-  </section>
+  </section> -->
 
   <!-- Map -->
-  <div id="contact" class="map">
+<!--   <div id="contact" class="map">
     <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
     <br />
     <small>
       <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
     </small>
-  </div>
+  </div> -->
 
   <!-- Footer -->
   <footer class="footer text-center">
@@ -223,7 +249,7 @@
         </li>
         <li class="list-inline-item">
           <a class="social-link rounded-circle text-white mr-3" href="#!">
-            <i class="icon-social-twitter"></i>
+            <i class="icon-social-linkedin"></i>
           </a>
         </li>
         <li class="list-inline-item">
@@ -232,7 +258,14 @@
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Your Website 2020</p>
+	    <a href="http://wa.me/919064297782">
+	      <button type="button" class="btn btn-whatsapp">
+			  <i class="fab btn-whatsapp pr-1"></i>
+			  <span>Whatsapp</span>
+		  </button>
+		</a>
+<!-- 		<span class="counter"></span> -->
+      <p class="text-muted small mb-0">Copyright &copy; Swaraj</p>
     </div>
   </footer>
 
