--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="js-scroll-trigger" href="#page-top">Swaraj</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#page-top">Home</a>
@@ -65,15 +65,15 @@
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#about">About</a>
       </li>
-      <li class="sidebar-nav-item">
+<!--       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#services">Services</a>
-      </li>
+      </li> -->
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
       </li>
-      <li class="sidebar-nav-item">
+<!--       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#contact">Contact</a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 
@@ -90,18 +90,18 @@
   </header>
 
   <!-- About -->
-<!--   <section class="content-section bg-light" id="about">
+  <section class="content-section bg-light" id="about">
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-          <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-            <a href="https://unsplash.com/">Unsplash</a>!</p>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+          <h2>A Brief Introduction</h2>
+          <p class="lead mb-5">I am Swaraj Khan.
+           </p>
+<!--           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a> -->
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- Services -->
 <!--   <section class="content-section bg-primary text-white text-center" id="services">
